--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,6 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "hammerjs": "^2.0.8",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-time-picker": "^5.0.0",
     "redux": "^4.2.0",
+    "sass": "^1.55.0",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
